--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
         <spring.version>4.3.2.RELEASE</spring.version>
         <mysql.connector.version>5.1.36</mysql.connector.version>
         <slf4j.version>1.6.6</slf4j.version>
-        <log4j.version>1.2.12</log4j.version>
+        <log4j.version>2.6.2</log4j.version>
         <httpclient.version>4.1.2</httpclient.version>
         <jackson.version>2.1.0</jackson.version>
         <c3p0.version>0.9.1.2</c3p0.version>
@@ -224,5 +224,31 @@
             <artifactId>hibernate-ehcache</artifactId>
             <version>${hibernate.core}</version>
         </dependency>
+
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.5</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/commons-logging/commons-logging -->
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>1.2</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.4</version>
+        </dependency>
+
+
     </dependencies>
 </project>
