--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,6 +6,12 @@
     <welcome-file-list>
         <welcome-file>/WEB-INF/view/index.jsp</welcome-file>
     </welcome-file-list>
+
+    <context-param>
+        <param-name>log4jContextName</param-name>
+        <param-value>lifescore</param-value>
+    </context-param>
+
     <!-- 中央控制器 -->
     <servlet>
         <servlet-name>springmvc</servlet-name>
@@ -47,9 +53,7 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
-    <listener>
-        <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
-    </listener>
+
     <!-- 配置Spring的用于初始化容器对象的监听器 -->
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
