--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5.1</version>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
         </plugins>
@@ -63,6 +64,8 @@
         <hibernate.core>5.2.2.Final</hibernate.core>
         <hibernate.entitymanager>5.2.2.Final</hibernate.entitymanager>
         <hibernate.validator.version>5.2.2.Final</hibernate.validator.version>
+        <freemarker.version>2.3.25-incubating</freemarker.version>
+        <spring.shiro>1.3.0</spring.shiro>
     </properties>
 
     <dependencies>
@@ -261,9 +264,29 @@
         <dependency>
             <groupId>org.freemarker</groupId>
             <artifactId>freemarker</artifactId>
-            <version>2.3.25-incubating</version>
+            <version>${freemarker.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-core</artifactId>
+            <version>${spring.shiro}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-web</artifactId>
+            <version>${spring.shiro}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-ehcache</artifactId>
+            <version>${spring.shiro}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring</artifactId>
+            <version>${spring.shiro}</version>
+        </dependency>
 
     </dependencies>
 </project>
