--- a/pom.xml
+++ b/pom.xml
@@ -288,5 +288,13 @@
             <version>${spring.shiro}</version>
         </dependency>
 
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+
+
+
     </dependencies>
 </project>
